--- a/css/demo.css
+++ b/css/demo.css
@@ -1,7 +1,7 @@
 body {
   color: #333;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-size: 12px;
+  font-size: 13px;
   margin: 0;
   padding: 20px;
   background-color: #eee;
@@ -13,9 +13,9 @@ h1, h2, h3 {
 }
 
 p, ul, ol {
-  line-height: 1.2em;
+  line-height: 1.4em;
   padding: 0;
-  margin: 0 0 1.2em;
+  margin: 0 0 1.4em;
 }
 
 ul, ol {
@@ -40,7 +40,7 @@ a:hover {
 
 #wrapper {
   padding: 20px;
-  width: 916px;
+  width: 616px;
   margin: 0 auto;
   background-color: #fff;
   border: 2px solid #ccc;
@@ -48,7 +48,6 @@ a:hover {
 
 #menu {
   list-style-type: none;
-  padding: 0;
   padding: 0 0 1em;
   border-bottom: 2px solid #eee;
   font-size: 16px;
@@ -62,4 +61,22 @@ a:hover {
 
 #menu li a {
   text-decoration: none;
+}
+
+#footer  {
+  padding: 10px 20px;
+  margin: 0 auto;
+  width: 620px;
+  text-align: center;
+  font-size: 12px;
+  color: #999;
+}
+
+#footer a {
+  color: #555;
+  text-decoration: underline;
+}
+
+#footer a:hover {
+  color: #c00;
 }
